# zkir-prover

./: Cargo.toml  LICENSE-APACHE  README.md
benches/: benchmark_deferred_comparison.rs  full_pipeline_benchmark.rs  normalization_baseline_bench.rs  prover_bench.rs  prover_benchmarks.rs
examples/: end_to_end_proving.rs  prove_zkir.rs
examples/array_sum/: array_sum.c  array_sum.zkir
examples/bitwise_ops/: bitwise_ops.c  bitwise_ops.zkir
examples/fibonacci/: fibonacci.bc  fibonacci.c  fibonacci.zkir
examples/loop_sum/: loop_sum.bc  loop_sum.c  loop_sum.zkir
examples/simple_add/: simple_add.bc  simple_add.c  simple_add.ll  simple_add.zkir
scripts/: benchmark.sh
src/: lib.rs  machine.rs  main.rs  proof.rs  prover.rs  verifier.rs
src/backend/: mod.rs  proof.rs  trait.rs
src/backend/plonky3/: air.rs  backend_impl.rs  config.rs  mod.rs  pcs.rs  prover.rs  verifier.rs
src/chips/range/: mod.rs
src/columns/: constants.rs  indices.rs  mod.rs
src/constraints/: air.rs  bitwise.rs  challenges.rs  crypto.rs  execution.rs  hierarchical.rs  instruction_decode.rs  logup.rs  memory.rs  mod.rs  range_check.rs
src/types/: mod.rs
src/vm_integration/: converter.rs  mod.rs  prover.rs
src/witness/: auxiliary.rs  collector.rs  mod.rs  multiplicity.rs  table_sums.rs  trace.rs  verify.rs
tests/: benchmark_deferred_mode.rs  benchmark_deferred_simple.rs  bitwise_operations_test.rs  check_indicator_columns.rs  compare_add_vs_addi.rs  complex_program_tests.rs  comprehensive_integration_test.rs  comprehensive_test_suite.rs  constraint_integration_test.rs  deferred_edge_cases.rs  deferred_stress_tests.rs  edge_case_tests.rs  immediate_and_comparison_tests.rs  instruction_coverage_tests.rs  large_trace_investigation.rs  minimal_bitwise_test.rs  normalization_edge_cases_test.rs  normalization_logup_integration_test.rs  normalization_witness_test.rs  per_instruction_tests.rs  performance_benchmark.rs  print_all_columns.rs  stress_test.rs  test_array_sum_example.rs  test_column_indices.rs  test_high_registers.rs  test_memory_permutation.rs  test_rap_integration.rs  test_simple_array.rs  test_single_addi.rs  trace_logup_calc.rs  verify_logup_math.rs  vm_integration_test.rs
